--- a/app/src/main/res/values/app_ic_background.xml
+++ b/app/src/main/res/values/app_ic_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="app_ic_background">#F47905</color>
+    <color name="app_ic_background">#FF7F00</color>
 </resources>
